[gd_scene load_steps=39 format=3 uid="uid://bhhffwhk6yyqu"]

[ext_resource type="Script" uid="uid://cjy2wenueykb6" path="res://Scripts/UI/TitleScreen.gd" id="1_3txao"]
[ext_resource type="Texture2D" uid="uid://b0qrrxm7r1rgc" path="res://Sprites/UI/Title Screen/Sky.png" id="2_28uqs"]
[ext_resource type="Texture2D" uid="uid://xmxvmam0080x" path="res://Sprites/UI/Title Screen/Scroll.png" id="3_bvwvd"]
[ext_resource type="Texture2D" uid="uid://c63o17p3g26m5" path="res://Sprites/UI/Title Screen/Stage.png" id="4_5b5vi"]
[ext_resource type="Texture2D" uid="uid://1ngsdrxr3fp6" path="res://Sprites/UI/Title Screen/Characters.png" id="5_o00x8"]
[ext_resource type="Texture2D" uid="uid://dmegii86ekoeh" path="res://Sprites/UI/Title Screen/Title.png" id="7_c5u5f"]
[ext_resource type="Texture2D" uid="uid://i72bn023shol" path="res://Sprites/UI/Title Screen/SelectSquare.png" id="8_5b5vi"]
[ext_resource type="FontFile" uid="uid://dw3bs4aaneafm" path="res://Sprites/Font.png" id="8_bvwvd"]
[ext_resource type="Texture2D" uid="uid://c4atbwyjpdqp8" path="res://Sprites/UI/Title Screen/Curtain.png" id="10_vk2b7"]
[ext_resource type="Texture2D" uid="uid://bvd25vci38frg" path="res://Sprites/UI/Title Screen/Button2.png" id="11_kyt38"]
[ext_resource type="AudioStream" uid="uid://c6v4hdnu0somo" path="res://Audio/BGM/titletheme.mp3" id="12_2lcr0"]
[ext_resource type="AudioStream" uid="uid://bef0hapqcqi67" path="res://Audio/Sfx/Inventory.wav" id="13_bvwvd"]
[ext_resource type="AudioStream" uid="uid://c4o8sr5idypgb" path="res://Audio/Sfx/MapMove.wav" id="16_iwqp0"]

[sub_resource type="Animation" id="Animation_n82rj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(240, -25)]
}

[sub_resource type="Animation" id="Animation_6vd4x"]
resource_name = "scroll"
length = 15.0
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, -25), Vector2(-240, -25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0061g"]
_data = {
&"RESET": SubResource("Animation_n82rj"),
&"scroll": SubResource("Animation_6vd4x")
}

[sub_resource type="Animation" id="Animation_o00x8"]
resource_name = "new_animation"
length = 15.0
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(288, -26), Vector2(-288, -26)]
}

[sub_resource type="Animation" id="Animation_84xpj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -26)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ft70"]
_data = {
&"RESET": SubResource("Animation_84xpj"),
&"new_animation": SubResource("Animation_o00x8")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mbv52"]
atlas = ExtResource("5_o00x8")
region = Rect2(0, 0, 128, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obdur"]
atlas = ExtResource("5_o00x8")
region = Rect2(0, 32, 128, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prs6u"]
atlas = ExtResource("5_o00x8")
region = Rect2(0, 64, 128, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exc60"]
atlas = ExtResource("5_o00x8")
region = Rect2(0, 96, 128, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o1e67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbv52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obdur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prs6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exc60")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_84xpj"]
atlas = ExtResource("7_c5u5f")
region = Rect2(0, 0, 256, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ft70"]
atlas = ExtResource("7_c5u5f")
region = Rect2(0, 96, 256, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdsak"]
atlas = ExtResource("7_c5u5f")
region = Rect2(0, 192, 256, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs1xq"]
atlas = ExtResource("7_c5u5f")
region = Rect2(0, 288, 256, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_mbv52"]
animations = [{
"frames": [{
"duration": 20.0,
"texture": SubResource("AtlasTexture_84xpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ft70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdsak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs1xq")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_w5sh6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 11.935)]
}

[sub_resource type="Animation" id="Animation_sqelc"]
resource_name = "bop"
length = 10.0
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 9.966666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -35), Vector2(0, -23), Vector2(0, -35)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1e67"]
_data = {
&"RESET": SubResource("Animation_w5sh6"),
&"bop": SubResource("Animation_sqelc")
}

[sub_resource type="Animation" id="Animation_8mikk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0061g"]
resource_name = "rise"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -231)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqelc"]
_data = {
&"RESET": SubResource("Animation_8mikk"),
&"rise": SubResource("Animation_0061g")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_iwqp0"]
atlas = ExtResource("11_kyt38")
region = Rect2(0, 0, 76, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw2l0"]
atlas = ExtResource("11_kyt38")
region = Rect2(76, 0, 76, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1y01"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwqp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw2l0")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_3txao")

[node name="Sky" type="Sprite2D" parent="."]
texture = ExtResource("2_28uqs")

[node name="BGO" type="Sprite2D" parent="Sky"]
position = Vector2(240, -25)
texture = ExtResource("3_bvwvd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sky/BGO"]
libraries = {
&"": SubResource("AnimationLibrary_0061g")
}
autoplay = "scroll"

[node name="Stage" type="Sprite2D" parent="Sky"]
position = Vector2(0, -26)
texture = ExtResource("4_5b5vi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sky/Stage"]
libraries = {
&"": SubResource("AnimationLibrary_5ft70")
}
autoplay = "new_animation"

[node name="Players" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 61)
sprite_frames = SubResource("SpriteFrames_o1e67")
autoplay = "default"
frame_progress = 0.2482412

[node name="Title" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 11.935)
sprite_frames = SubResource("SpriteFrames_mbv52")
autoplay = "default"
frame_progress = 0.7844461

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
&"": SubResource("AnimationLibrary_o1e67")
}
autoplay = "bop"

[node name="LeftSquare" type="Sprite2D" parent="."]
position = Vector2(0, -17.229998)
texture = ExtResource("8_5b5vi")

[node name="RightSquare" type="Sprite2D" parent="."]
position = Vector2(0, -17.229998)
texture = ExtResource("8_5b5vi")

[node name="StoryMode" type="Label" parent="."]
offset_left = -97.0
offset_top = 28.0
offset_right = -17.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("8_bvwvd")
theme_override_font_sizes/font_size = 8
text = "story mode"

[node name="Options" type="Label" parent="."]
offset_left = 57.0
offset_top = 28.0
offset_right = 113.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("8_bvwvd")
theme_override_font_sizes/font_size = 8
text = "options
"

[node name="Curtain" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("10_vk2b7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Curtain"]
libraries = {
&"": SubResource("AnimationLibrary_sqelc")
}

[node name="PressSpace" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k1y01")
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="TitleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_2lcr0")
bus = &"SFX"

[node name="Select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_bvwvd")
volume_db = 3.0

[node name="Move" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_iwqp0")
